--- a/index.html
+++ b/index.html
@@ -12,30 +12,36 @@
       <p class="sale">SALE</p>
       <article class="product">
         <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-        <img src="img\conversechoe.png" height="250" width="250" />
-        <p class="price"><strong>$65.00</strong></p>
-        <p class="shipping">Free Shipping</p>
-        <p class="para">
-          Ready to dress up or down, these converse all stars are an everyday
-          wardrode staple
-        </p>
-        <a class="more-info" href="#">More Information &#x2192</a>
-        <div class="colors">
-          <p class="colorOne"></p>
-          <p class="colorTwo"></p>
-          <p class="colorThree"></p>
-          <p class="colorFour"></p>
-          <p class="colorFive"></p>
-          <p class="colorSix"></p>
-
+        <div class="boxOne">
+          <img src="img\conversechoe.png" height="250" width="250" />
         </div>
-        <h4>Product details</h4>
-        <ul>
-          <li>Lightweight surable canvas sneaker</li>
-          <li>Lightly padded footbed for added comfort</li>
-          <li>Iconic Chuck Taylor ankle patch</li>
-        </ul>
-        <button>Add To Cart</button>
+        <div class="boxTwo">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free Shipping</p>
+          <p class="para">
+            Ready to dress up or down, these converse all stars are an everyday
+            wardrode staple
+          </p>
+          <a class="more-info" href="#">More Information &#x2192</a>
+          <div class="colors">
+            <p class="colorOne"></p>
+            <p class="colorTwo"></p>
+            <p class="colorThree"></p>
+            <p class="colorFour"></p>
+            <p class="colorFive"></p>
+            <p class="colorSix"></p>
+          </div>
+        </div>
+        <div class="boxThree clear-fix">
+          
+          <h4>Product details</h4>
+          <ul>
+            <li>Lightweight surable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch</li>
+          </ul>
+          <button>Add To Cart</button>
+        </div>
       </article>
     </div>
   </body>
